Fix content spacing collapse

--- a/src/_includes/css/components/card-content.css
+++ b/src/_includes/css/components/card-content.css
@@ -36,6 +36,10 @@
   padding: 0 var(--spacing-xsmall) var(--spacing-main) var(--spacing-xsmall);
 }
 
+.card-content__info {
+  padding: var(--spacing-main) var(--spacing-xlarge);
+}
+
 .card-content__info * {
   display: block;
 }
